deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ddi-access-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ddi-access-services
  template:
    metadata:
      labels:
        app: ddi-access-services
    spec:
      containers:
        - name: ddi-access-services
          image: inseefr/ddi-access-services:latest
