service.yml
apiVersion: v1
kind: Service
metadata:
  name: ddi-access-services
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 8080
  selector:
    app: ddi-access-services
