ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ddi-access-services
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - ddi-access-services.demo.dev.sspcloud.fr
  rules:
    - host: ddi-access-services.demo.dev.sspcloud.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: ddi-access-services
              servicePort: http
